--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://dpg-cjf1t1qvvtos73fit900-a.oregon-postgres.render.com/srsdbname_l05n
+spring.datasource.url=jdbc:postgresql://dpg-cjf1t1qvvtos73fit900-a/srsdbname_l05n
 spring.datasource.username=root
 spring.datasource.password=ioq3Si3vc0kALO7XZ6SjR1bmlJR6eHeS
 spring.jpa.hibernate.show-sql=true
