properties dosyasında OSIV  düzenleme yapildi

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,4 +5,5 @@ spring.datasource.username=root
 spring.datasource.password=uN8wTzQCz8aGMcmzFD2P7P6M0BsxoNLf
 spring.jpa.hibernate.show-sql=true
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 
