properties dosyasi guncellendi

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,6 +5,6 @@ spring.datasource.url=jdbc:postgresql://dpg-cr6vj508fa8c7382ms3g-a/srsdb
 spring.datasource.username=root
 spring.datasource.password=uN8wTzQCz8aGMcmzFD2P7P6M0BsxoNLf
 spring.jpa.hibernate.show-sql=true
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 
